--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
 
         <section class="skills" id="skills">
             <h2>
-                <div class="grid">
                     <div>
-                        <hr class="solid-left" style="width: 44%;">
-                        <span class="title" style="float:center;">Skills</span>
-                        <hr class="solid-right" style="width: 45.3%;">
+                        <div class="Row">
+                            <div class="Column"><hr class="solid"></div>
+                            <div class="Column">Skills</div>
+                            <div class="Column"><hr class="solid"></div>
+                        </div>
                     </div>
-                </div>
             </h2>
             <div class="grid">
                 <div>
@@ -116,9 +116,11 @@
         <section class="projects" id="projects">
             <article>
                 <h2>
-                    <hr class="solid-left" style="width: 43%;">
-                    <span class="title">Projects</span>
-                    <hr class="solid-right" style="width: 43.3%">
+                    <div class="Row">
+                        <div class="Column"><hr class="solid"></div>
+                        <div class="Column">Projects</div>
+                        <div class="Column"><hr class="solid"></div>
+                    </div>
                 </h2>
                 <div class="grid">
                     <div class="grid-projects">
@@ -184,12 +186,14 @@
         <section>
             <article>
                 <h2>
-                    <hr class="solid-left" style="width: 42%;">
-                    <span class="title">Experience</span>
-                    <hr class="solid-right" style="width: 41%;">
+                    <div class="Row">
+                        <div class="Column"><hr class="solid"></div>
+                        <div class="Column">Experience</div>
+                        <div class="Column"><hr class="solid"></div>
+                    </div>
                 </h2>
                 <div style="display:flex; align-items:center;">
-                    <img src="https://media.licdn.com/dms/image/D4E0BAQEmNwAMTIEZOA/company-logo_200_200/0/1666611740237?e=1684972800&v=beta&t=zkSpXCJPgC-CY-Bczv0wYgYWSlmVnDvoKIJ0NEgJ2EM"
+                    <img src="images/kbc-logo.jpg"
                         width="80" height="60" style="margin-right: 10px;" />
                     <ul class="ul-basic-parent">
                         <h3>Data Engineer, 06/2021 to current</h3>
@@ -217,7 +221,7 @@
                 <hr class="solid">
 
                 <div style="display:flex; align-items:center;">
-                    <img src="https://media.licdn.com/dms/image/C4D0BAQGmhXM6lNsahg/company-logo_200_200/0/1519876021235?e=1684972800&v=beta&t=i59VlK9zDJcGsaCh-DlMSWoKz9Jt3rLq5J-wou1qMtA"
+                    <img src="images/louis-delhaize logo.jpg"
                         width="80" height="60" style="margin-right: 10px;" />
                     <ul class="ul-basic-parent">
                         <h3>Business Intelligence Analyst, 03/2020 to 06/2021</h3>
@@ -242,7 +246,7 @@
                 <hr class="solid">
 
                 <div style="display:flex; align-items:center;">
-                    <img src="https://media.licdn.com/dms/image/C560BAQGwLyu_OVKHvg/company-logo_200_200/0/1626723979046?e=1684972800&v=beta&t=FXVcsWLZSvv89BdTw2fySqhGfuTRHxSZew6pJSR5DWg"
+                    <img src="images/shopify logo.jpg"
                         width="61" height="60" style="margin-right: 10px;" />
                     <ul class="ul-basic-parent">
                         <h3>Data Analyst, 09/2019 to 03/2020</h3>
@@ -262,7 +266,7 @@
                 <hr class="solid">
 
                 <div style="display:flex; align-items:center;">
-                    <img src="https://media.licdn.com/dms/image/C4E0BAQGLMhr37VUp_Q/company-logo_200_200/0/1607620209401?e=1684972800&v=beta&t=7e70DAxq_YXHnumVArtlUviuZ-6rpV-xiQoOjy3hLJo"
+                    <img src="images/camara logo.jpg"
                         width="61" height="60" style="margin-right: 10px;" />
                     <ul class="ul-basic-parent">
                         <h3>Parliamentary Assistant, 03/2016 to 06/2019</h3>
@@ -288,9 +292,11 @@
         <section>
             <article>
                 <h2>
-                    <hr class="solid-left" style="width: 42%;">
-                    <span class="title">Languages</span>
-                    <hr class="solid-right" style="width: 41.8%;">
+                    <div class="Row">
+                        <div class="Column"><hr class="solid"></div>
+                        <div class="Column">Languages</div>
+                        <div class="Column"><hr class="solid"></div>
+                    </div>
                 </h2>
                 <ul class="ul-basic">
                     <li><img src="https://www.worldometers.info/img/flags/br-flag.gif" width="20" height="16" />
@@ -310,9 +316,11 @@
 
         <section>
             <h2>
-                <hr class="solid-left" style="width: 40.3%;">
-                <span class="title">Certifications</span>
-                <hr class="solid-right" style="width: 40%;">
+                <div class="Row">
+                    <div class="Column"><hr class="solid"></div>
+                    <div class="Column">Certifications</div>
+                    <div class="Column"><hr class="solid"></div>
+                </div>
             </h2>
             <ul class="ul-basic">
                 <li>
