--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     </div>
                     <div id="profile-pic">
                         <img src="https://media.licdn.com/dms/image/D4E03AQGo_K0pgSaG5A/profile-displayphoto-shrink_200_200/0/1669143719885?e=1682553600&v=beta&t=j9of4CS7VlMHmy-DRA9wXc35zZwi_Riuk9gHqZGlxRg"
-                        width="400rem" height="400rem" style="border-radius: 1rem;">
+                        width="auto" height="90%" style="border-radius: 1rem;">
                     </div>
                 </div>
             </article>
