--- a/projects/exclusion-attributes.html
+++ b/projects/exclusion-attributes.html
@@ -31,8 +31,13 @@
                 width="200" height="200" />
             <a
                 href="https://newsroom.kbc.com/kbc-creates-a-first-in-europe-with-the-kate-coin-its-own-digital-coin-based-on-blockchain#">
-                <h1>Exclusion Attributes (2022)</h1>
+                <h1>Exclusion Attributes</h1>
             </a>
+            <p>2022</p>
+            </a>
+            <h3>Project Summary</h3>
+
+            <h3>My tasks</h3>
             <p>As a Data Engineer, I re-engineered one of our critical files that contained exclusion attributes. My
                 main objective was to create a faster, well-documented, and easy-to-understand codebase that could be
                 easily shared and maintained. Here are some of the technical aspects of the project:</p>
