--- a/projects/kate-coin.html
+++ b/projects/kate-coin.html
@@ -33,7 +33,10 @@
                 href="https://newsroom.kbc.com/kbc-creates-a-first-in-europe-with-the-kate-coin-its-own-digital-coin-based-on-blockchain#">
                 <h1>Kate Coin</h1>
             </a>
-            <p>2022-2023</p>
+        </a>
+        <p>2022-2023</p>
+        </a>
+        <h3>Project Summary</h3>
             <p>The Kate Coin is a digital coin (e-money token), which is based on blockchain technology and was
                 developed entirely within KBC.
                 Soon, private KBC customers will be able to acquire Kate Coins and effectively use them via their Kate
@@ -47,6 +50,7 @@
                 They could also offer the Kate Coins and, together with KBC, further diversify and grow their business.
             </p>
 
+            <h3>My tasks</h3>
             <p>As a Data Engineer, my primary tasks were to create a Datalake, pipelines, repository, DataStore, and
                 ensure they functioned smoothly in production. Here are the technical details of the project:</p>
             <ul>
