--- a/projects/training.html
+++ b/projects/training.html
@@ -35,13 +35,13 @@
             </a>
             <p>2021-2023</p>
             </a>
+            
+            <h3>Project Summary</h3>
+            <p>As a Data Engineer, I was responsible for designing and delivering a comprehensive training program
+                for new Data engineers and Data analysts
+            </p>
 
-                <h3>Project Summary</h3>
-                <p>As a Data Engineer, I was responsible for designing and delivering a comprehensive training program
-                    for
-                    new Data Engineers in a leading technology company
-                </p>
-
+            <h3>My tasks</h3>
             <p>The program was aimed at providing the new hires
                 with the necessary skills and knowledge to design, develop, and maintain data pipelines and
                 infrastructure, and contribute to the company's data-driven culture. Here are the tasks and
@@ -50,21 +50,15 @@
                 <li>Collaborated with cross-functional teams, including HR, Learning and Development, and the Technical
                     Leadership team, to define the program's objectives, curriculum, and learning outcomes, and align
                     them with the company's strategic goals and values.</li>
-                <li>Designed and developed the training materials, including presentations, documentation, exercises,
-                    and hands-on projects, using a variety of tools and technologies, such as Python, Spark, SQL,
-                    Jenkins, Linux, Hadoop, and Data Governance frameworks.</li>
                 <li>Delivered the training sessions in-person and remotely, using various formats, such as
-                    classroom-style lectures, group discussions, one-on-one coaching, and virtual labs, to accommodate
+                    classroom-style lectures, group discussions, one-on-one coaching, to accommodate
                     different learning styles and preferences.</li>
-                <li>Evaluated the trainees' progress and performance, using a variety of methods, such as quizzes,
-                    assignments, code reviews, and peer feedback, and provided timely and constructive feedback to help
+                <li>Evaluated the trainees' progress and performance, using a variety of methods,
+                    code reviews, and peer feedback, and provided timely and constructive feedback to help
                     them improve their skills and knowledge.</li>
                 <li>Provided mentorship and guidance to the trainees, offering them the necessary support and resources
                     to help them succeed in their roles, and answer their questions and concerns about the program and
                     the company's data infrastructure and processes.</li>
-                <li>Managed the program logistics, such as scheduling, budgeting, and reporting, and collaborated with
-                    the program stakeholders to ensure the program's success and impact on the trainees' careers and the
-                    company's data strategy.</li>
             </ul>
             <p>Through my experience and expertise as a Data Engineer and educator, I delivered a comprehensive and
                 impactful training program that prepared the new Data Engineers to contribute to the company's
