--- a/index.html
+++ b/index.html
@@ -40,18 +40,6 @@
                             needs. </p>
                         <p>My current target area of expertise is around <i>Python, Workflow Orchestration, Spark and
                                 Data Governance</i>.</p>
-                        <ul class="ul-basic">
-                            <li><img src="https://www.worldometers.info/img/flags/br-flag.gif" width="20" height="16" />
-                                Portuguese:
-                                Native language</li>
-                            <li><img src="https://www.worldometers.info/img/flags/uk-flag.gif" width="20" height="16" />
-                                English: Fluent
-                            </li>
-                            <li><img src="https://www.worldometers.info/img/flags/fr-flag.gif" width="20" height="16" />
-                                French:
-                                Advanced
-                            </li>
-                        </ul>
                         <br>
                         <a href="https://www.linkedin.com/in/santosfgustavog/" target="_blank" class="social-link">
                             <button class="social-button linkedin-button">
@@ -74,7 +62,7 @@
                     </div>
                     <div id="profile-pic">
                         <img src="images/profile.jpeg"
-                            width="80%" height="auto" style="border-radius: 1rem;">
+                            width="70%" height="auto" style="border-radius: 1rem;">
                     </div>
                 </div>
             </article>
@@ -141,7 +129,8 @@
                         <hr class="solid">
                         <p>KBC Mobile is a perfect and efficient banking app for everyday needs and one of the most
                             innovative with some interesting extras.</p>
-                        <p>Data Engineer responsible for...</p>
+                        <p>As a Data Engineer, my primary responsibility was to design, develop and implement a batch data
+                            ingestion pipelines</p>
                         <p style="border-top: 1px solid black; bottom: 0;">Python, Spark, SQL, Jenkins, Workflow
                             Orchestration, Hadoop, DataOps, Data Governance,
                             Agile</p>
@@ -156,7 +145,8 @@
                         <hr class="solid">
                         <p>KBC creates a first in Europe with the Kate Coin, its own digital coin based on blockchain
                         </p>
-                        <p>Lead Data Engineer responsible for...</p>
+                        <p>As Lead Data Engineer, my primary responsibility was to architect, orchestrate, develop and implement a batch data ingestion pipelines and
+                            ensure they functioned smoothly in production</p>
                         <p class="grid-bottom">Python, Spark, SQL, Jenkins, Workflow Orchestration, Data Quality, Data
                             Governance, Agile, SaFe</p>
                     </div>
@@ -169,7 +159,7 @@
                         <p class="grid-date">2022</p>
                         <hr class="solid">
                         <p>The most important Kate pipelines with over 400GB of data being processed daily</p>
-                        <p>Data Engineer responsible for...</p>
+                        <p>My main objective was to create a faster, well-documented, and easy-to-understand codebase that could be easily shared and maintained</p>
                         <p class="grid-bottom">Python, Spark, SQL, Workflow Orchestration, Hadoop, DataOps, Agile, SaFe
                         </p>
                     </div>
@@ -181,7 +171,7 @@
                         </a>
                         <p class="grid-date">2022-2023</p>
                         <hr class="solid">
-                        <p>I was training my colleagues on
+                        <p>I train my colleagues on
                             various topics related to data engineering. The training program was a long-term initiative
                             that aimed to upskill our team in the latest technologies and practices related to data
                             engineering.
@@ -194,7 +184,7 @@
         </section>
 
 
-        <section>
+        <section class="experience" id="experience">
             <article>
                 <h2>
                     <div class="Row">
