--- a/projects/exclusion-attributes.html
+++ b/projects/exclusion-attributes.html
@@ -11,20 +11,49 @@
     <div class="container">
         <nav>
             <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#experience">Experience</a></li>
+                <li><a href="../index.html#about">About</a></li>
+                <li><a href="../index.html#skills">Skills</a></li>
+                <li><a href="../index.html#projects">Projects</a></li>
+                <li><a href="../index.html#experience">Experience</a></li>
             </ul>
         </nav>
 
         <header class="hero">
-            <h1>Gustavo Santos</h1>
-            <p>Data Engineer / Architect</p>
-            <a href="https://www.linkedin.com/in/santosfgustavog/" class="button">Get in Touch</a>
-            <p><a href="https://www.linkedin.com/in/santosfgustavog/">LinkedIn</a> • <a
-                    href="https://github.com/Santos-Gustavo">GitHub</a></p>
+            <a href="../index.html">
+                <h1>Gustavo Santos</h1>
+            </a>
+            <p>Data Expert</p>
+            <!-- <a href="https://www.linkedin.com/in/santosfgustavog/" class="button">Get in Touch </a> -->
+
+
+
         </header>
+        <section class="summary-parent">
+            <article>
+                <div class="grid">
+                    <div>
+                        <a href="https://www.linkedin.com/in/santosfgustavog/" target="_blank" class="social-link">
+                            <button class="social-button linkedin-button">
+                                <img src="../images/linkedin-svgrepo-com.svg" alt="LinkedIn logo" class="social-icon">
+                            </button>
+                        </a>
+
+                        <a href="hhttps://github.com/Santos-Gustavo" target="_blank" class="social-link">
+                            <button class="social-button github-button">
+                                <img src="../images/github-icon-1-logo-svgrepo-com.svg" alt="Github logo"
+                                    class="social-icon">
+                            </button>
+                        </a>
+
+                        <a href="https://medium.com/@gustavo-santos" target="_blank" class="social-link">
+                            <button class="social-button medium-button">
+                                <img src="../images/medium-svgrepo-com.svg" alt="Medium logo" class="social-icon">
+                            </button>
+                        </a>
+                    </div>
+                </div>
+            </article>
+        </section>
 
         <div>
             <img src="https://cdn.uc.assets.prezly.com/67988f99-85de-4574-9bce-243d616c0972/-/preview/2048x2048/-/quality/best/-/format/auto/"
@@ -36,6 +65,7 @@
             <p>2022</p>
             </a>
             <h3>Project Summary</h3>
+            <p>Our 3 most critical files were legacy code, poorly written and with inaccurate analysis</p>
 
             <h3>My tasks</h3>
             <p>As a Data Engineer, I re-engineered one of our critical files that contained exclusion attributes. My
