--- a/projects/kate-coin.html
+++ b/projects/kate-coin.html
@@ -19,24 +19,21 @@
         </nav>
 
         <header class="hero">
-            <h1>Gustavo Santos</h1>
+            <a href="../index.html">
+                <h1>Gustavo Santos</h1>
+            </a>
             <p>Data Engineer / Architect</p>
             <a href="https://www.linkedin.com/in/santosfgustavog/" class="button">Get in Touch</a>
-            <p><a href="https://www.linkedin.com/in/santosfgustavog/">LinkedIn</a> • <a
-                    href="https://github.com/Santos-Gustavo">GitHub</a></p>
         </header>
 
         <div>
-            <img src="https://cdn.uc.assets.prezly.com/67988f99-85de-4574-9bce-243d616c0972/-/preview/2048x2048/-/quality/best/-/format/auto/"
-                width="200" height="200" />
             <a
                 href="https://newsroom.kbc.com/kbc-creates-a-first-in-europe-with-the-kate-coin-its-own-digital-coin-based-on-blockchain#">
                 <h1>Kate Coin</h1>
             </a>
-        </a>
-        <p>2022-2023</p>
-        </a>
-        <h3>Project Summary</h3>
+            <p>2022-2023</p>
+            </a>
+            <h3>Project Summary</h3>
             <p>The Kate Coin is a digital coin (e-money token), which is based on blockchain technology and was
                 developed entirely within KBC.
                 Soon, private KBC customers will be able to acquire Kate Coins and effectively use them via their Kate
