--- a/projects/kate.html
+++ b/projects/kate.html
@@ -19,17 +19,15 @@
         </nav>
 
         <header class="hero">
-            <h1>Gustavo Santos</h1>
+            <a href="../index.html">
+                <h1>Gustavo Santos</h1>
+            </a>
             <p>Data Engineer / Architect</p>
             <a href="https://www.linkedin.com/in/santosfgustavog/" class="button">Get in Touch</a>
-            <p><a href="https://www.linkedin.com/in/santosfgustavog/">LinkedIn</a> • <a
-                    href="https://github.com/Santos-Gustavo">GitHub</a></p>
         </header>
 
 
         <div>
-            <img src="https://www.assecure.be/uploads/cms/_AUTOxAUTO_crop_center-center_100_none/Kate.PNG" width="200"
-                height="200" />
             <a
                 href="https://amcham.be/our-members/member-news/kbc-mobile-named-best-mobile-banking-app-worldwide-independent">
                 <h1>Kate</h1>
