--- a/projects/training.html
+++ b/projects/training.html
@@ -19,23 +19,18 @@
         </nav>
 
         <header class="hero">
-            <h1>Gustavo Santos</h1>
+            <a href="../index.html">
+                <h1>Gustavo Santos</h1>
+            </a>
             <p>Data Engineer / Architect</p>
             <a href="https://www.linkedin.com/in/santosfgustavog/" class="button">Get in Touch</a>
-            <p><a href="https://www.linkedin.com/in/santosfgustavog/">LinkedIn</a> • <a
-                    href="https://github.com/Santos-Gustavo">GitHub</a></p>
         </header>
 
         <div>
-            <img src="https://www.assecure.be/uploads/cms/_AUTOxAUTO_crop_center-center_100_none/Kate.PNG" width="200"
-                height="200" />
-            <a
-                href="https://amcham.be/our-members/member-news/kbc-mobile-named-best-mobile-banking-app-worldwide-independent">
-                <h1>Data Engineering Training Program</h1>
-            </a>
+            <h1>Data Engineering Training Program</h1>
             <p>2021-2023</p>
             </a>
-            
+
             <h3>Project Summary</h3>
             <p>As a Data Engineer, I was responsible for designing and delivering a comprehensive training program
                 for new Data engineers and Data analysts
