--- a/projects/exclusion-attributes.html
+++ b/projects/exclusion-attributes.html
@@ -22,46 +22,12 @@
             <a href="../index.html">
                 <h1>Gustavo Santos</h1>
             </a>
-            <p>Data Expert</p>
-            <!-- <a href="https://www.linkedin.com/in/santosfgustavog/" class="button">Get in Touch </a> -->
-
-
-
+            <p>Data Engineer / Architect</p>
+            <a href="https://www.linkedin.com/in/santosfgustavog/" class="button">Get in Touch</a>
         </header>
-        <section class="summary-parent">
-            <article>
-                <div class="grid">
-                    <div>
-                        <a href="https://www.linkedin.com/in/santosfgustavog/" target="_blank" class="social-link">
-                            <button class="social-button linkedin-button">
-                                <img src="../images/linkedin-svgrepo-com.svg" alt="LinkedIn logo" class="social-icon">
-                            </button>
-                        </a>
-
-                        <a href="hhttps://github.com/Santos-Gustavo" target="_blank" class="social-link">
-                            <button class="social-button github-button">
-                                <img src="../images/github-icon-1-logo-svgrepo-com.svg" alt="Github logo"
-                                    class="social-icon">
-                            </button>
-                        </a>
-
-                        <a href="https://medium.com/@gustavo-santos" target="_blank" class="social-link">
-                            <button class="social-button medium-button">
-                                <img src="../images/medium-svgrepo-com.svg" alt="Medium logo" class="social-icon">
-                            </button>
-                        </a>
-                    </div>
-                </div>
-            </article>
-        </section>
 
         <div>
-            <img src="https://cdn.uc.assets.prezly.com/67988f99-85de-4574-9bce-243d616c0972/-/preview/2048x2048/-/quality/best/-/format/auto/"
-                width="200" height="200" />
-            <a
-                href="https://newsroom.kbc.com/kbc-creates-a-first-in-europe-with-the-kate-coin-its-own-digital-coin-based-on-blockchain#">
-                <h1>Exclusion Attributes</h1>
-            </a>
+            <h1>Exclusion Attributes</h1>
             <p>2022</p>
             </a>
             <h3>Project Summary</h3>
