--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         </a>
                     </div>
                     <div id="profile-pic">
-                        <img src="images/profile.jpeg" width="70%" height="auto" style="border-radius: 1rem;">
+                        <img src="images/profile.jpg" width="70%" height="auto" style="border-radius: 1rem;">
                     </div>
                 </div>
             </article>
