--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <header class="hero">
             <h1>Gustavo Santos</h1>
-            <p>Data Engineer / Architect</p>
+            <p>Data Engineer / Project Manager</p>
             <!-- <a href="https://www.linkedin.com/in/santosfgustavog/" class="button">Get in Touch </a> -->
 
 
@@ -94,7 +94,7 @@
                     </ul>
                 </div>
                 <div>
-                    <h3 id="skills-h3">Project Management-</h3>
+                    <h3 id="skills-h3">Project Management</h3>
                     <ul>
                         <li>Leadership</li>
                         <li>Scrum Master (Agile)</li>
