--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 
 <head>
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JF16QE76BB"></script>
-<script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JF16QE76BB"></script>
+    <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'G-JF16QE76BB');
 </script>
+<meta charset="UTF-8">
+    <title>Gustavo Santos - Resume</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
