Add dutch as language and add Elia as job

--- a/index.html
+++ b/index.html
@@ -213,10 +213,25 @@
                         </div>
                     </div>
                 </h2>
+
+                <div style="display:flex; align-items:center;">
+                    <img src="images/elia-logo.png" width="80" height=auto style="margin-right: 0px;" />
+                    <ul class="ul-basic-parent">
+                        <h3>Lead Data Engineer, 07/2024 to current</h3>
+                        <p><strong>Elia Group, Belgium</strong></p>
+                        <ul class="ul-basic">
+                            <li>
+                                ...
+                            </li>
+                        </ul>
+                    </ul>
+                </div>
+                <hr class="solid"> 
+
                 <div style="display:flex; align-items:center;">
                     <img src="images/toyota-logo.png" width="80" height="60" style="margin-right: 0px;" />
                     <ul class="ul-basic-parent">
-                        <h3>Project Data Manager, 06/2023 to current</h3>
+                        <h3>Project Data Manager, 06/2023 to 06/2024</h3>
                         <p><strong>Toyota Motor Europe, Brussels, Belgium</strong></p>
                         <ul class="ul-basic">
                             <li>
@@ -268,7 +283,7 @@
                 <div style="display:flex; align-items:center;">
                     <img src="images/louis-delhaize logo.jpg" width="80" height="60" style="margin-right: 10px;" />
                     <ul class="ul-basic-parent">
-                        <h3>Business Intelligence Analyst, 03/2020 to 06/2021</h3>
+                        <h3>Business Intelligence Analyst, 09/2019 to 06/2021</h3>
                         <p><strong>Louis Delhaize – Brussels, Belgium</strong></p>
                         <ul class="ul-basic">
                             <li>Develop Power BI intelligence-sharing dashboards, providing company-wide access to
@@ -289,7 +304,7 @@
                 </div>
                 <hr class="solid">
 
-                <div style="display:flex; align-items:center;">
+                <!-- <div style="display:flex; align-items:center;">
                     <img src="images/shopify logo.jpg" width="61" height="60" style="margin-right: 10px;" />
                     <ul class="ul-basic-parent">
                         <h3>Data Analyst, 09/2019 to 03/2020</h3>
@@ -306,7 +321,7 @@
                         </p>
                     </ul>
                 </div>
-                <hr class="solid">
+                <hr class="solid"> -->
 
                 <div style="display:flex; align-items:center;">
                     <img src="images/camara logo.jpg" width="61" height="60" style="margin-right: 10px;" />
@@ -354,6 +369,10 @@
                     <li><img src="https://www.worldometers.info/img/flags/fr-flag.gif" class="flag"/>
                         French:
                         Advanced
+                    </li>
+                    <li><img src="https://www.worldometers.info/img/flags/be-flag.gif" class="flag"/>
+                        Dutch:
+                        Basic
                     </li>
                 </ul>
 
