--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <header class="hero">
             <h1>Gustavo Santos</h1>
-            <p>Data Engineer / Project Manager</p>
+            <p>Lead Data Engineer / Engineering Manager</p>
             <!-- <a href="https://www.linkedin.com/in/santosfgustavog/" class="button">Get in Touch </a> -->
 
 
@@ -44,14 +44,12 @@
                 <div class="grid">
                     <div>
                         <h2>About Myself</h2>
-                        <p>Hi! I'm Gustavo, an IT enthusiast which works full time as a Data Engineer/Architect.</p>
-                        <p>I typically fulfill the roles of <b>Lead Data Engineer and Project Manager</b> with a strong
-                            focus on growing my team through technical challenges, training sessions, presentations and
-                            mentoring.</p>
+                        <p>I'm an IT enthusiast which works typically fulfill the roles of <b>Lead Data Engineer and Data Project Manager</b> with a strong
+                            focus on managing deliveries through critical challenges and deadlines, managing stakeholders expectations, teaching and leading technical teams.</p>
 
-                        <p>I have switched between technical and business roles, giving me a broad vision of a company
+                        <p>I have switched between technical, business and management roles, giving me a broad vision of a company
                             needs. </p>
-                        <p>My current target area of expertise is around <i>Python, Workflow Orchestration, Spark and
+                        <p>My current target area of expertise is around <i>Complete Data Solution Delivery, Data Team Management, Stakeholders Guidance and
                                 Data Governance</i>.</p>
                         <br>
                         <a href="https://www.linkedin.com/in/santosfgustavog/" target="_blank" class="social-link">
