Removed unused pics and small changes in text

--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
       <div class="container hero__inner">
         <div class="hero__left">
           <div class="hero__name">Gustavo Santos</div>
-          <div class="hero__title">Data Product Delivery &amp; Lead Data Engineer</div>
+          <div class="hero__title">Data Product &amp; Platform Lead</div>
 
           <p class="hero__text">
             I design, deliver, and fix data products and platforms in complex environments, from cloud migrations
             and governance to high-scale data products used by millions of customers.
           </p>
           <p class="hero__text">
-            I’m focused on roles where I can build or repair and lead data teams, business processes, and platforms
-            end-to-end, on a path towards Head/Director of Data Engineering.
+            I’m focused on roles where I can own the data function end-to-end, building or repairing teams, processes, 
+            and platforms, on a path to Head of Data Engineering.
           </p>
 
           <p class="hero__one-liner">
@@ -95,7 +95,9 @@
               Introduced documentation standards, designed and aligned cross-department business processes, and
               built a realistic roadmap with regular communication and deliveries. Secured support to scale
               data governance and IT into a two-product program of ~15 people, turning a stalled project into
-              an organised, owned, priority-one initiative mentioned company-wide.
+              an organised, owned, priority-one initiative reducing firefighting around critical risk reporting 
+              and giving leadership a single, trusted view.
+              <b>Acted as de-facto data product owner</b>
             </p>
           </article>
 
@@ -109,6 +111,7 @@
               shape and drive the migration of processing pipelines and data warehouses to Snowflake. This created a
               shared, governed data foundation across departments, where we could apply governance, track key metrics,
               and execute against a clear roadmap instead of each initiative reinventing its own data solution.
+              <b>Partnered with senior management and leadership to define the roadmap, governance, and scope.</b>
             </p>
           </article>
 
@@ -122,6 +125,7 @@
               multiple products and requiring constant hyper-care. By turning it into a stable, reusable data
               component, we reduced incidents reported by downstream teams and restored predictable delivery on
               top of that foundation.
+              <b>Reduced FTE necessary to handle it by 75% and restored predictable delivery timelines.</b>
             </p>
           </article>
 
@@ -181,8 +185,12 @@
     <section class="section section--muted" id="principles">
       <div class="container">
         <h2 class="section__title">How I think about data &amp; teams</h2>
-
+        <p class="section__subtitle">
+        <i>A data team is a product in itself – with clear owners, SLAs, and a roadmap, not a ticket factory.</i>
+      </p>
+        
         <div class="principles-grid">
+
           <div class="principle-item">
             <strong>Data platforms should be boring in production.</strong>
             The interesting part should be the insights and products, not nightly firefighting.
@@ -224,8 +232,6 @@
             From business request to BI dashboard, the flow should be explicit,
             agreed by stakeholders, and treated as a living system we continuously improve.
           </div>
-
-          
         </div>
 
         <div class="principles-footer">
@@ -289,20 +295,11 @@
 
         <div class="experience-list">
 
-          <!-- <div class="experience-item">
-            <div class="experience-item__header">Lead Data Engineer / Data Product Delivery</div>
-            <div class="experience-item__meta">Consulting · Banking, energy, automotive, retail</div>
-            <div class="experience-item__body">
-              Leading data engineering work and programs across complex enterprises: stabilising critical components,
-              shaping platform migrations, and aligning data work with business priorities and governance.
-            </div>
-          </div> -->
-
           <div class="experience-item">
-            <div class="experience-item__header">Lead Data Engineer & Data Product Delivery – Elia </div>
+            <div class="experience-item__header">Data Product & Platform Lead – Elia </div>
             <div class="experience-item__meta">Energy &amp; Transmission · Belgium</div>
             <div class="experience-item__body">
-              Took an broken project with no clear requirements, processes or ownership. Introduced documentation
+              Took a broken project with no clear requirements, processes or ownership. Introduced documentation
               standards, designed cross-department business processes, built a realistic roadmap and secured support to grow
               the team into a two-product program of ~15 people, turning it into a structured, priority-one initiative.
             </div>
